fix: swagger for iam user api
